# ai-powered-business-intelligence-system

./: .gitignore  MANUAL_MODEL_RUNBOOK.md  README.md  requirements.txt
.github/workflows/: ci.yml  (+3 more)
apps/ai-engine/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/ai-engine/docs/: OPERATIONS.md
apps/ai-engine/scripts/models/: evaluate.py  list_models.py  promote.py  rollback.py
apps/ai-engine/scripts/training/: seed_urls.txt  train.py
apps/ai-engine/src/agents/: __init__.py
apps/ai-engine/src/agents/core/: agent_executor.py  base_agent.py
apps/ai-engine/src/agents/memory/: long_term_memory.py  short_term_memory.py
apps/ai-engine/src/agents/multi_agent/: orchestrator.py
apps/ai-engine/src/agents/planning/: chain_of_thought.py  react.py  tree_of_thought.py
apps/ai-engine/src/agents/reflection/: self_critic.py
apps/ai-engine/src/agents/tools/: calculator_tool.py  code_executor_tool.py  retrieval_tool.py  tool_registry.py  web_search_tool.py
apps/ai-engine/src/api/: main.py  metrics.py
apps/ai-engine/src/api/middleware/: auth.py  request_context.py
apps/ai-engine/src/api/routes/: __init__.py  admin.py  agents.py  chat.py  completions.py  embeddings.py
apps/ai-engine/src/api/schemas/: requests.py  responses.py
apps/ai-engine/src/architectures/: __init__.py
apps/ai-engine/src/config/: settings.py
apps/ai-engine/src/data/: pipeline.py
apps/ai-engine/src/learning/: __init__.py
apps/ai-engine/src/llm/: __init__.py
apps/ai-engine/src/nn/: __init__.py
apps/ai-engine/src/rl/: __init__.py
apps/ai-engine/src/tokenizer/: __init__.py  special_tokens.py  vocabulary.py
apps/ai-engine/src/training/: __init__.py
apps/ai-engine/src/utils/: file_io.py  logger.py
(+232 files in other folders)
